<resources>
    <string name="app_name">Coupon Alert</string>
    <string name="action_settings">Settings</string>
    <string name="new_coupon">New Coupon</string>
    <string name="view_or_edit">View or Edit</string>
    <string name="help">Help</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="another_coupon">Add Another Coupon</string>
    <string name="store">Store Name</string>
    <string name="amount">Amount (format: 1.99)</string>
    <string name="date">Date (format: m-d-yy)</string>
    <string name="product">Product Name</string>
    <string name="notes">Notes</string>
    <string name="view_coupon">View Coupons</string>
    <string name="save_coupon">Save Coupon</string>
    <string name="save_edits">Save Edits</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="mark_as_used">Mark as Used</string>
    <string name="activity_title_edit_coupon">Coupon Alert: Edit Coupon</string>
    <string name="activity_title_new_coupon">Coupon Alert: New Coupon</string>
    <string name="activity_title_view_edit">Coupon Alert: View or Edit</string>
    <string name="activity_title_help">Coupon Alert: Help</string>
    <string name="quick_start">Quick Start</string>
    <string name="detailed_directions">General Information</string>
    <string name="screenshots">Screenshots</string>
    <string name="quick_start_text_1">Press “New Coupon” to enter a coupon.</string>
    <string name="quick_start_text_2">Press “View or Edit” to view and edit coupons.</string>
    <string name="quick_start_text_3">In “View or Edit”, press a coupon to edit it, long-press a coupon to delete it.</string>
    <string name="quick_start_text_4">Use the Options Menu (Android 3.x and later) or Android menu button (Android 2.x and earlier) to navigate 
        to other screens.</string>
    <string name="quick_start_text_5">There will be two alerts for each coupon: one at 5 am on the date of expiration and 
        one at 5 am two days before.</string>
    <string name="bullet">•</string>
    <string name="detailed_directions_title">Detailed Directions</string>
    <string name="detailed_directions_subtitle1">What this app does</string>
    <string name="detailed_directions_text1">This app is for those of us who forget about their coupons 
        until after the expiration date.  The app is simple.  You add in the coupon details manually, 
        and the app will alert you twice about the coupon: once 2 days before it expires, and once on the day of expiration.  You 
        can edit the coupons after they’ve been saved, and you can delete them.\n\nWhile the app was intended specifically 
        for coupon reminders, it can be used to remind yourself about anything.\n</string>
    <string name="detailed_directions_subtitle2">Caution</string>
    <string name="detailed_directions_text2">If an alert comes while the device is off, it’ll only display once you turn the 
        device back on.  The app does not turn on the device.\n</string>
    <string name="detailed_directions_subtitle3">App navigation</string>
    <string name="detailed_directions_text3">On the front screen, select \"New Coupon\", \"View or Edit\" or \"Help\".  In the Help screens, 
        press back to return to the previous screen.  Otherwise use the Options Menu to navigate from screen to screen.  If using Android 
        2.x or earlier, the Menu button (typically at bottom) is pressed to access the Options Menu.\n</string>
    <string name="detailed_directions_subtitle4">Alerts</string>
    <string name="detailed_directions_text4">Alerts arrive at 5 am on the coupon’s expiration date and 5 am two days before 
        the expiration date.\n</string>
    <string name="detailed_directions_subtitle5">In the future</string>
    <string name="detailed_directions_text5">If there’s enough interest, I’m thinking of creating a paid 
        (but still cheap, probably $0.99) version which allows you to choose how many alerts you want for a coupon, 
        when they come, and the ability to categorize and filter coupons.  Suggestions are welcomed.\n</string>
    <string name="screenshots_directions">Screenshots/Detailed Directions</string>
    <string name="front_page">Front Page</string>
    <string name="view_or_edit_delete">Deleting/marking coupon as used</string>
    <string name="edit_coupon">Edit Coupon</string>
    <string name="notification">Alerts</string>
    <string name="info_phone">The following screenshots were taken on a Samsung Galaxy S5 running Android 4.4.4 (KitKat).</string>
    <string name="front_page_1">Press “New Coupon” to input a new coupon.</string>
    <string name="front_page_2">Press “View or Edit” to view or edit existing coupons.</string>
    <string name="front_page_3">Press “Help” to access this screen.</string>
    <string name="new_coupon_1">On the “New Coupon” screen, enter your coupon\'s information.</string>
    <string name="new_coupon_2">If the “Amount” value has up to two decimal places, the app will automatically change it to show a dollar amount
        (5 will show up as $5.00, .5 as $0.50).  Words can also be entered.</string>
    <string name="new_coupon_3">Date values must be separated by dashes (e.g., "5–31–15" is correct but "5/31/15" is not).</string>
    <string name="new_coupon_4">Scroll down to the “Save Coupon” button to save the coupon and create alerts.</string>
    <string name="new_coupon_5">Press “View Coupons” to view all saved coupons.  If "View Coupons" is entered before "Save Coupon"
        is pressed, any changes will be lost.</string>
    <string name="new_coupon_6">“VIEW OR EDIT” at top can be pressed to access the same screen as the “View Coupons” button.</string>
    <string name="new_coupon_7">Users of Android 2.x will need to press the phone’s Menu button to see the “View or Edit” or “Help” options seen here.</string>
    <string name="view_edit1_1">The “View or Edit” screen allows you to see saved coupons and edit them.</string>
    <string name="view_edit1_2">On the top line of the coupon, the store and amount appear in bold, and the date entered appears in blue.  
        Below that is the product text.  If notes are entered, they appear indented at bottom.</string>
    <string name="view_edit1_3">Press the coupon to edit the coupon.  The “Edit Coupon” screen will open up (it looks very similar to the “New Coupon” screen described before).</string>
    <string name="view_edit1_4">Long-press the button to delete the coupon or mark it as used.</string>
    <string name="view_edit1_5">Click the “NEW COUPON” button at top to enter a new coupon.</string>
    <string name="view_edit1_6">Users of Android 2.x will need to press the phone’s Menu button to see the “View or Edit” or “Help” options seen here.</string>
    <string name="view_edit2_delete_1">After a coupon is long pressed, a dialog pops up.</string>
    <string name="view_edit2_delete_2">Press “Yes” to completely delete the coupon and any remaining alerts.</string>
    <string name="view_edit2_delete_3">Press “Mark as Used” to cancel any remaining alerts without deleting the coupon.  
        The coupon will show up as grayed out on the “View or Edit” screen and the text “USED” will appear.  If “Mark as Used” 
        is pressed mistakenly, edit the coupon and delete the text “USED”.</string>
    <string name="view_edit2_delete_4">Press “Cancel” to return to the “View or Edit” screen.</string>
    <string name="view_edit2_1">After a coupon is long pressed, a dialog pops up.</string>
    <string name="view_edit2_2">Press “Yes” to completely delete the coupon and any remaining alerts.</string>
    <string name="view_edit2_3">Press “Mark as Used” to cancel any remaining alerts without deleting the coupon.  The coupon will show up as 
        grayed out on the “View or Edit” screen and the text “USED” will appear.  If “Mark as Used” is pressed mistakenly, 
        edit the coupon and delete the text “USED”.</string>
    <string name="view_edit2_4">Press “Cancel” to return to the “View or Edit” screen.</string>
    <string name="edit_coupon_1">After pressing the coupon, the Edit Coupon screen appears, where you can edit any of the information.</string>
    <string name="edit_coupon_2">Scroll down and press “Save Edits” to save any changes.</string>
    <string name="edit_coupon_3">Press “View Coupons” to return to the “View or Edit” screen.</string>
    <string name="notification1_1">Alerts will arrive two days before the date entered for a coupon and on the day entered.  
        Alerts arrive at 5 am.</string>
    <string name="notification1_2">Alerts will arrive even if the screen is off.</string>
    <string name="notification1_3">If alerts arrive when the phone is powered down (i.e., completely turned off), 
        the alerts will display soon after the phone is turned on the next time.</string>
    <string name="notification1_4">Alerts will be shown in the Notifications pull-down screen, one entry for each alert.  On most phones, 
        to display the Notifications screen, swipe down from the top of the phone’s screen.</string>
    <string name="notification1_5">If multiple alerts are present on the Notifications screen, tap the most recent one to open the 
        View or Edit screen of the app.</string>
    <string name="notification1_6">When an alert has arrived, the “cent” icon, which can be seen on the right on the Notifications screen, 
        will also appear in the Notification Bar, 
        which is the thin box at the top of the screen (i.e., the one that shows remaining battery percentage, the time, etc.).</string>
    <string name="notification1_7">The store, product and amount values of the coupon will appear in the alert text.</string>
    <string name="notification1_8">In the above screenshot, the two entries with a "cent" icon are alerts from this app.  The
        other entry (i.e., "Connected as a media device") is unrelated to this app.  The date the alerts were received is 10/14.
          One ABC Mart coupon is scheduled to expire that day, and another ABC Mart coupon is scheduled to expire 
          two days later.</string>
    <string name="desc_new_coupon">Image of the New Coupon screen with sample values filled in.</string>
    <string name="desc_view_edit1">Image of the View or Edit screen displaying a single sample coupon.</string>
    <string name="desc_view_edit2">Image of the message box asking the user whether they want to delete the coupon.</string>
    <string name="desc_notification1">Image of the Notification pull-down screen with two sample notification entries.</string>
    <string name="eula_title">End-User License Agreement</string>
</resources>