<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view_help"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark_gray" >

    <RelativeLayout
        android:id="@+id/help_relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/detailed_directions_title"
            style="@style/HelpHeading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailed_directions" />

        <TextView
            android:id="@+id/detailed_directions_subtitle1"
            style="@style/HelpHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_title"
            android:text="@string/detailed_directions_subtitle1" />

        <TextView
            android:id="@+id/detailed_directions_text1"
            style="@style/HelpBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_subtitle1"
            android:text="@string/detailed_directions_text1" />

        <TextView
            android:id="@+id/detailed_directions_subtitle2"
            style="@style/HelpHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_text1"
            android:text="@string/detailed_directions_subtitle2" />

        <TextView
            android:id="@+id/detailed_directions_text2"
            style="@style/HelpBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_subtitle2"
            android:text="@string/detailed_directions_text2" />

        <TextView
            android:id="@+id/detailed_directions_subtitle3"
            style="@style/HelpHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_text2"
            android:text="@string/detailed_directions_subtitle3" />

        <TextView
            android:id="@+id/detailed_directions_text3"
            style="@style/HelpBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_subtitle3"
            android:text="@string/detailed_directions_text3" />

        <TextView
            android:id="@+id/detailed_directions_subtitle4"
            style="@style/HelpHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_text3"
            android:text="@string/detailed_directions_subtitle4" />

        <TextView
            android:id="@+id/detailed_directions_text4"
            style="@style/HelpBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_subtitle4"
            android:text="@string/detailed_directions_text4" />

        <TextView
            android:id="@+id/detailed_directions_subtitle5"
            style="@style/HelpHeading3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_text4"
            android:text="@string/detailed_directions_subtitle5" />

        <TextView
            android:id="@+id/detailed_directions_text5"
            style="@style/HelpBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detailed_directions_subtitle5"
            android:text="@string/detailed_directions_text5" />
    </RelativeLayout>

</ScrollView>
